Add support for Oracle Linux
Weirdly doesn't include 'tar', so I added that to the template for the
RPM base images.

--- a/templates/Dockerfile-rpm-base.tmpl
+++ b/templates/Dockerfile-rpm-base.tmpl
@@ -12,6 +12,7 @@ RUN yum -y update \
         pam-devel \
         readline-devel \
         rpm-build \
+        tar \
         wget \
     && yum clean all
 
