Add Red Hat support for building arbitrary commits
This temporarily breaks building tags. Now build_packages.sh needs a
git sha and builds that particular commit (at least for Red Hat).

--- a/templates/Dockerfile-rpm-base.tmpl
+++ b/templates/Dockerfile-rpm-base.tmpl
@@ -12,8 +12,8 @@ RUN yum -y update \
         pam-devel \
         readline-devel \
         rpm-build \
+        spectool \
         tar \
-        wget \
     && yum clean all
 
 COPY scripts /scripts
