Finish up git SHA build work

--- a/templates/Dockerfile-rpm-base.tmpl
+++ b/templates/Dockerfile-rpm-base.tmpl
@@ -12,10 +12,8 @@ RUN yum -y update \
         readline-devel \
         rpm-build \
         spectool \
+        tar \
     && yum clean all
-
-COPY scripts /scripts
-COPY rpm/citus.spec /
 
 ENV OS=%%os%% \
     RELEASE=%%release%%
