--- a/templates/Dockerfile-deb.tmpl
+++ b/templates/Dockerfile-deb.tmpl
@@ -22,11 +22,8 @@ RUN apt-key adv --keyserver ha.pool.sks-keyservers.net --recv-keys B97B0AFCAA1A4
         wget \
     && rm -rf /var/lib/apt/lists/*
 
-ENV OS=%%os%% \
-    RELEASE=%%release%%
-
-COPY debian /debian
+ENV PATH /scripts:$PATH
 COPY scripts /scripts
 VOLUME /packages
 
-CMD ["/scripts/get_and_build_citus.sh"]
+CMD ["/scripts/build_deb_nightly"]
