Add main Red Hat script
To build RPMs.

--- a/templates/Dockerfile-rpm-base.tmpl
+++ b/templates/Dockerfile-rpm-base.tmpl
@@ -4,6 +4,7 @@ FROM %%os%%:%%release%%
 RUN yum -y update \
     && yum groupinstall -y 'Development Tools' \
     && yum install -y \
+        curl \
         flex \
         libxml2-devel \
         libxslt-devel \
