--- a/templates/Dockerfile-deb.tmpl
+++ b/templates/Dockerfile-deb.tmpl
@@ -8,6 +8,7 @@ RUN apt-key adv --keyserver ha.pool.sks-keyservers.net --recv-keys B97B0AFCAA1A4
         autotools-dev \
         build-essential \
         ca-certificates \
+        curl \
         debhelper \
         devscripts \
         fakeroot \
@@ -18,6 +19,7 @@ RUN apt-key adv --keyserver ha.pool.sks-keyservers.net --recv-keys B97B0AFCAA1A4
         libselinux1-dev \
         libxslt-dev \
         lintian \
+        jq \
         postgresql-server-dev-all \
         wget \
     && rm -rf /var/lib/apt/lists/*
@@ -26,4 +28,4 @@ ENV PATH /scripts:$PATH
 COPY scripts /scripts
 VOLUME /packages
 
-CMD ["/scripts/build_deb_nightly"]
+ENTRYPOINT ["/scripts/fetch_and_build_deb"]
