--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -16,6 +16,7 @@ RUN yum groupinstall -y 'Development Tools' \
         pam-devel \
         readline-devel \
         rpm-build \
+        rpmlint \
         spectool \
         tar \
     && yum install -y https://%%rpm_url%% \
@@ -31,6 +32,9 @@ RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 
 RUN curl -s https://packagecloud.io/install/repositories/citusdata/community/script.rpm.sh | bash \
     && yum install -y citus_%%pgshort%% \
     && yum clean all
+
+RUN touch /rpmlintrc \
+    && echo '%_build_pkgcheck %{_bindir}/rpmlint -f /rpmlintrc' >> /etc/rpm/macros
 
 # set PostgreSQL version, place scripts on path, and declare output volume
 ENV PGVERSION=%%pgversion%% \
