--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -5,7 +5,7 @@ FROM %%os%%:%%release%%
 RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl || touch /var/lib/rpm/* ) \
     && yum clean all
 
-# FIXME: make sure ol7_developer repo is available
+# Enable some other repos for some dependencies in OL/7 
 # see https://oracle-base.com/articles/linux/download-the-latest-oracle-linux-repo-file#oracle-linux-7-updated
 RUN [[ %%os%% != oraclelinux ]] || [[ %%release%% != 7 ]] || ( \
         pushd /etc/yum.repos.d/ \
@@ -16,7 +16,8 @@ RUN [[ %%os%% != oraclelinux ]] || [[ %%release%% != 7 ]] || ( \
             ol7_software_collections \
             ol7_developer \
             ol7_developer_EPEL \
-        && yum clean all ) 
+            ol7_optional_archive \
+        && yum clean all )
 
 # install build tools and PostgreSQL development files
 RUN ( [[ -z "%%extra-repositories%%" ]] || yum install -y %%extra-repositories%%) \
