install libstdc++ for hll packaging

--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -29,6 +29,7 @@ RUN ( [[ -z "%%extra-repositories%%" ]] || yum install -y %%extra-repositories%%
         hunspell-en \
         libcurl-devel \
         libicu-devel \
+        libstdc++-devel \
         libxml2-devel \
         libxslt-devel \
         openssl-devel \
