Install libreadline-dev packages for pg_auto_failover packaging

--- a/templates/Dockerfile-deb.tmpl
+++ b/templates/Dockerfile-deb.tmpl
@@ -56,6 +56,7 @@ RUN echo 'deb http://apt.postgresql.org/pub/repos/apt/ %%release%%-pgdg main' > 
         libicu-dev \
         libkrb5-dev \
         libpam0g-dev \
+        libreadline-dev \
         libselinux1-dev \
         libssl-dev \
         libxslt-dev \
