--- a/templates/Dockerfile-deb.tmpl
+++ b/templates/Dockerfile-deb.tmpl
@@ -66,6 +66,10 @@ RUN echo 'deb http://apt.postgresql.org/pub/repos/apt/ %%release%%-pgdg main' > 
         zlib1g-dev \
         python3-pip \
         python3-setuptools \
+        liblz4-dev \
+        liblz4-1 \
+        libzstd1 \
+        libzstd-dev \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip3 install sphinx==1.8
