--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -39,6 +39,10 @@ RUN ( [[ -z "%%extra-repositories%%" ]] || yum install -y %%extra-repositories%%
         rpmlint \
         spectool \
         tar \
+        lz4 \
+        lz4-devel \
+        libzstd \
+        libzstd-devel \
         %%extra-packages%% \
     && yum install -y https://%%rpm_url%% \
     && ( [[ %%release%% < 8 ]] || dnf -qy module disable postgresql ) \
