Fixed lz4 and zstd support for oracle 7

--- a/templates/Dockerfile-rpm.tmpl
+++ b/templates/Dockerfile-rpm.tmpl
@@ -19,6 +19,11 @@ RUN [[ %%os%% != oraclelinux ]] || [[ %%release%% != 7 ]] || ( \
             ol7_optional_archive \
         && yum clean all )
 
+RUN if [[ %%os%%  == oraclelinux ]] && [[ %%release%% == 7 ]]; then yum install -y wget \
+        && wget http://mirror.centos.org/centos/7/os/x86_64/Packages/lz4-devel-1.8.3-1.el7.x86_64.rpm \
+        && rpm -ivh lz4-devel-1.8.3-1.el7.x86_64.rpm ; else \
+         yum install -y lz4 lz4-devel ; fi
+
 # install build tools and PostgreSQL development files
 RUN ( [[ -z "%%extra-repositories%%" ]] || yum install -y %%extra-repositories%%) \
     && yum groupinstall -y 'Development Tools' \
@@ -39,8 +44,6 @@ RUN ( [[ -z "%%extra-repositories%%" ]] || yum install -y %%extra-repositories%%
         rpmlint \
         spectool \
         tar \
-        lz4 \
-        lz4-devel \
         libzstd \
         libzstd-devel \
         %%extra-packages%% \
